 * New conditions:
 ** Totems 1-4 (only shown if applicable to current class)
 ** Spell in range of unit
 ** Item in range of unit
 ** Spell usable (mana, rage, energy, etc)
 * Bug fixes:
 ** Error fix: TellMeWhen_Options.lua:2431: attempt to index field '?' (a nil value) 
 ** Fixed the bug with moonfire debuff tracking in 4.1
 

 ===v4.1.1===
 * New Condition: Unit Class
 * Fixed frame level issues in the meta editor

===v4.1.0===
 * Implemented sounds! It should be mostly functional, but if you find anything that is breaking or not working how it probably should, open a ticket.
 * Reduced CPU usage by about 20%.
 * Alpha can now be customized for when conditions fail, or for when duration/stack requirements are not met.
 * Made the meta icon editor much prettier.
 * New/changed conditions:
 ** Old Buff/Debuff conditions changed to Buff/Debuff Stacks
 ** Buff duration 
 ** Debuff duration
 ** Cooldown and weapon enchant conditions now allow you to specify a duration
 * Fixes since the first revision of this version:
 ** (r52) Fixed the alpha on unusable reactive icons
 ** (r52) Fixed a bug where icons that were set to fake hidden would sometimes still show after leaving config
 ** (r52) Fixed stack text on buff icons
 ** (r53) Fixed: conditions.lua line 1220: bad argument #1 to 'gsub' (string expected, got nil) 
 ** (r53) Fixed: TellMeWhen_Options.lua:2217: attempt to index field '?' (a nil value)
 ** (r54) Fixed the sheck sub-metas toggle for meta icons - accidentally broke the anchor for it
 ** (r54) Meta icons should obey conditions
 ** (r55) Cooldowns on meta icons should properly set when the meta changes to from an icon with an active timer to one without, and then back to the first icon that has an active timer.

 ===v4.0.4===
 * Maybe fixed a really rare frame level bug with cooldowns?
 * Stance conditions work now.
 * Fixed debuff conditions.